--- a/packages/spindle-ui/src/Dialog/Dialog.css
+++ b/packages/spindle-ui/src/Dialog/Dialog.css
@@ -1,4 +1,4 @@
-@import '../ButtonGroup/ButtonGroup.css';
+@import "../ButtonGroup/ButtonGroup.css";
 
 .spui-Dialog {
   background: var(--color-surface-primary);
