--- a/packages/spindle-ui/src/Form/Radio.css
+++ b/packages/spindle-ui/src/Form/Radio.css
@@ -1,3 +1,3 @@
 /* Re-export for backward compatibility after directory structure refactoring */
 /* TODO: Remove this file in a future major version */
-@import './Radio/Radio.css';
+@import "./Radio/Radio.css";
