--- a/packages/spindle-ui/src/Form/TextArea.css
+++ b/packages/spindle-ui/src/Form/TextArea.css
@@ -1,3 +1,3 @@
 /* Re-export for backward compatibility after directory structure refactoring */
 /* TODO: Remove this file in a future major version */
-@import './TextArea/TextArea.css';
+@import "./TextArea/TextArea.css";
