--- a/packages/spindle-ui/src/Form/TextField.css
+++ b/packages/spindle-ui/src/Form/TextField.css
@@ -1,3 +1,3 @@
 /* Re-export for backward compatibility after directory structure refactoring */
 /* TODO: Remove this file in a future major version */
-@import './TextField/TextField.css';
+@import "./TextField/TextField.css";
