--- a/packages/spindle-ui/src/Form/ToggleSwitch.css
+++ b/packages/spindle-ui/src/Form/ToggleSwitch.css
@@ -1,3 +1,3 @@
 /* Re-export for backward compatibility after directory structure refactoring */
 /* TODO: Remove this file in a future major version */
-@import './ToggleSwitch/ToggleSwitch.css';
+@import "./ToggleSwitch/ToggleSwitch.css";
