fix(spindle-ui): add icon color support for TextLink
- アイコンにCSSカスタムプロパティによる色指定を追加
- normalバリアント用: --TextLink-icon-color
- subtleバリアント用: --TextLink--subtle-icon-color

--- a/packages/spindle-ui/src/TextLink/TextLink.css
+++ b/packages/spindle-ui/src/TextLink/TextLink.css
@@ -47,7 +47,12 @@
 }
 
 .spui-TextLink-icon {
+  color: var(--TextLink-icon-color);
   line-height: 0;
+}
+
+.spui-TextLink--subtle .spui-TextLink-icon {
+  color: var(--TextLink--subtle-icon-color);
 }
 
 .spui-TextLink--iconstart .spui-TextLink-icon {
