--- a/packages/spindle-ui/src/Tooltip/Tooltip.css
+++ b/packages/spindle-ui/src/Tooltip/Tooltip.css
@@ -222,6 +222,7 @@
 
 .spui-Tooltip-frame--edgeStart::before,
 .spui-Tooltip-frame--edgeEnd::before {
+  border-radius: 0;
   mask-size: 100% 100%;
   transform: none;
 }
